data/derived/comb/progs/unify/prog7991.ml.out
Characters 497-498:
  | SumInts expr -> (eval(expr, x, y) *. (eval(expr, x, y) +. 1.0) /. 2)
                                                                      ^
Error: This expression has type int but an expression was expected of type
         float
